--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,4 +2,4 @@ lib_LTLIBRARIES = libtrace.la
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 lib_HEADERS = libtrace.h dagformat.h wag.h
 libtrace_la_LIBADD = @LIBPCAP@ @LIBZ@
-libtrace_la_LDFLAGS=-version-info 2:0:0
+libtrace_la_LDFLAGS=-version-info 2:0:0 @LIBPCAP_PATH@ @LIBZ_PATH@
