--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ AM_INIT_AUTOMAKE(libtrace,[2.0.0],[libtrace@wand.net.nz])
 
 AC_PREREQ(2.5)
 
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -46,6 +46,7 @@ AC_DEFUN([CHECK_LIBPCAP_PATH],
 AC_CACHE_CHECK([location of pcap library],
 	       [ac_cv_use_pcap_path], [ac_cv_use_pcap_path=/usr/lib])])
 
+
 AC_DEFUN([CHECK_LIBZ],
 	 [AC_ARG_WITH([zlib],
 		      AC_HELP_STRING([--with-zlib],
@@ -55,10 +56,10 @@ AC_CACHE_CHECK([which zlib library to use],
 	       [ac_cv_use_zlib], [ac_cv_use_zlib=z])])
 
 AC_DEFUN([CHECK_LIBZ_PATH],
-	 [AC_ARG_WITH([zlib-path],
-		      AC_HELP_STRING([--with-zlib-path],
-				     [location of zlib library (default is /usr/lib)]),
-		      [ac_cv_use_zlib_path=$withval], [ac_cv_use_zlib_path=/usr/lib])
+	[AC_ARG_WITH([zlib-path],
+		AC_HELP_STRING([--with-zlib-path],
+			[location of zlib library (default is /usr/lib)]),
+		[ac_cv_use_zlib_path=$withval], [ac_cv_use_zlib_path=/usr/lib])
 AC_CACHE_CHECK([location of zlib library],
 	       [ac_cv_use_zlib_path], [ac_cv_use_zlib_path=/usr/lib])])
 
@@ -71,7 +72,7 @@ LIBPCAP=-l$ac_cv_use_pcap
 LIBPCAP_PATH=-L$ac_cv_use_pcap_path
 
 AC_SUBST([LIBPCAP])
-AC_SUBST([LIBPCAP_PATH)]
+AC_SUBST([LIBPCAP_PATH])
 
 LIBZ=-l$ac_cv_use_zlib
 LIBZ_PATH=-L$ac_cv_use_zlib_path
