--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,[2.0.0],[libtrace@wand.net.nz])
+AC_INIT(libtrace,2.0.0)
+AC_CONFIG_SRCDIR(lib/trace.c)
+AM_INIT_AUTOMAKE
 
 AC_PREREQ(2.5)
 
-AC_CONFIG_SRCDIR(lib/trace.c)
+
 AM_CONFIG_HEADER(lib/config.h)
 dnl Checks for programs.
 AC_PROG_CC
