--- a/examples/sample/Makefile
+++ b/examples/sample/Makefile
@@ -1,13 +1,11 @@
 
-libtrace_include = /usr/local/wand/include
-libtrace_libs = /usr/local/wand/lib
-
+PREFIX=/usr/local
 CC=gcc
 
-INCLUDE =  -I$(libtrace_include)
+INCLUDE = -I$(PREFIX)/include
 CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2
 CFLAGS += $(INCLUDE)
-libdir = -L$(libtrace_libs)
+libdir = -L$(PREFIX)/lib
 LDLIBS = $(libdir) -ltrace
 
 BINS = sample
