--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(libtrace,2.0.4,[libtrace@wand.net.nz],libtrace)
+AC_INIT(libtrace,2.0.4a,[libtrace@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,2.0.4)
+AM_INIT_AUTOMAKE(libtrace,2.0.4a)
 
 dnl GNU C library
 dnl AC_GNU_SOURCE
