--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -58,13 +58,20 @@ POST_UNINSTALL = :
 host_alias = @host_alias@
 host_triplet = @host@
 AMTAR = @AMTAR@
+AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+CXX = @CXX@
+CXXCPP = @CXXCPP@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
+EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+F77 = @F77@
+GCJ = @GCJ@
+GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LIBPCAP = @LIBPCAP@
 LIBPCAP_PATH = @LIBPCAP_PATH@
@@ -76,6 +83,7 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
@@ -86,7 +94,7 @@ lib_LTLIBRARIES = libtrace.la
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 include_HEADERS = libtrace.h dagformat.h wag.h
 libtrace_la_LIBADD = @LIBPCAP@ @LIBZ@
-libtrace_la_LDFLAGS = -version-info 2:5:0 @LIBPCAP_PATH@ @LIBZ_PATH@
+libtrace_la_LDFLAGS = -version-info 2:6:0 @LIBPCAP_PATH@ @LIBZ_PATH@
 subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
